--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "eshop RESTful api",
   "main": "index.ts",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.ts",
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc --p"
   },
@@ -19,6 +19,7 @@
     "@types/validator": "^13.6.3",
     "mocha": "^9.1.2",
     "nodemon": "^2.0.13",
+    "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   },
   "dependencies": {
