--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha src/test/*.ts",
     "build": "tsc --p"
   },
   "author": "Jon Andoni Galdos",
@@ -15,6 +15,7 @@
     "@types/body-parser": "^1.19.1",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.5",
+    "@types/mocha": "^9.0.0",
     "@types/node": "^16.10.2",
     "@types/validator": "^13.6.3",
     "mocha": "^9.1.2",
