--- a/package.json
+++ b/package.json
@@ -2,22 +2,24 @@
   "name": "eshop",
   "version": "1.0.0",
   "description": "eshop RESTful api",
-  "main": "index.ts",
+  "main": "server.ts",
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "test": "mocha src/test/*.ts",
+    "test": "mocha test/*.*",
     "build": "tsc --p"
   },
   "author": "Jon Andoni Galdos",
   "license": "ISC",
   "devDependencies": {
     "@types/body-parser": "^1.19.1",
+    "@types/errorhandler": "^1.5.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.10.2",
     "@types/validator": "^13.6.3",
+    "errorhandler": "^1.5.1",
     "mocha": "^9.1.2",
     "nodemon": "^2.0.13",
     "ts-node": "^10.2.1",
