minor error fixed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -68,6 +68,6 @@
     "skipLibCheck": true,                     /* Skip type checking all .d.ts files. */
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
   ]
 }
