--- a/package.json
+++ b/package.json
@@ -26,13 +26,30 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "async": "^3.2.1",
+    "bcrypt-nodejs": "^0.0.3",
     "bcryptjs": "^2.4.3",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "connect-mongo": "^4.6.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.2",
     "express-validator": "^6.12.2",
+    "fbgraph": "^1.4.4",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "lusca": "^1.7.0",
+    "mongoose": "^6.0.10",
+    "nodemailer": "^6.7.0",
+    "passport": "^0.5.0",
+    "passport-facebook": "^3.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "winston": "^3.3.3"
   }
 }
