--- a/package.json
+++ b/package.json
@@ -12,16 +12,43 @@
   "author": "Jon Andoni Galdos",
   "license": "ISC",
   "devDependencies": {
+    "@types/async": "^3.2.8",
+    "@types/bcrypt-nodejs": "^0.0.31",
+    "@types/bluebird": "^3.5.36",
     "@types/body-parser": "^1.19.1",
+    "@types/chai": "^4.2.22",
+    "@types/compression": "^1.7.2",
+    "@types/concurrently": "^6.3.0",
     "@types/errorhandler": "^1.5.0",
     "@types/express": "^4.17.13",
+    "@types/express-flash": "^0.0.2",
+    "@types/express-session": "^1.17.4",
+    "@types/jest": "^27.0.2",
     "@types/jsonwebtoken": "^8.5.5",
+    "@types/lodash": "^4.14.175",
+    "@types/lusca": "^1.7.1",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.10.2",
+    "@types/nodemailer": "^6.4.4",
+    "@types/passport": "^1.0.7",
+    "@types/passport-facebook": "^2.1.11",
+    "@types/passport-local": "^1.0.34",
+    "@types/request": "^2.48.7",
+    "@types/request-promise": "^4.1.48",
+    "@types/shelljs": "^0.8.9",
+    "@types/supertest": "^2.0.11",
     "@types/validator": "^13.6.3",
+    "@types/winston": "^2.4.4",
+    "chai": "^4.3.4",
+    "concurrently": "^6.3.0",
     "errorhandler": "^1.5.1",
+    "jest": "^27.2.5",
     "mocha": "^9.1.2",
     "nodemon": "^2.0.13",
+    "sass": "^1.43.2",
+    "shelljs": "^0.8.4",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   },
