--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.ts",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts",
-    "test": "mocha test/*.*",
+    "dev": "nodemon --inspect src/index.ts",
+    "test": "jest --forceExit --coverage --verbose",
     "build": "tsc --p"
   },
   "author": "Jon Andoni Galdos",
