--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/compression": "^1.7.2",
     "@types/concurrently": "^6.3.0",
     "@types/errorhandler": "^1.5.0",
+    "@types/eslint": "^7.28.1",
     "@types/express": "^4.17.13",
     "@types/express-flash": "^0.0.2",
     "@types/express-session": "^1.17.4",
@@ -42,6 +43,7 @@
     "chai": "^4.3.4",
     "concurrently": "^6.3.0",
     "errorhandler": "^1.5.1",
+    "eslint": "^8.0.1",
     "jest": "^27.2.5",
     "mocha": "^9.1.2",
     "nodemon": "^2.0.13",
