--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.ts",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "nodemon --inspect src/index.ts",
+    "dev": "nodemon src/server.ts",
     "test": "jest --forceExit --coverage --verbose",
     "build": "tsc --p"
   },
