--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/async": "^3.2.8",
     "@types/bcrypt-nodejs": "^0.0.31",
+    "@types/bcryptjs": "^2.4.2",
     "@types/bluebird": "^3.5.36",
     "@types/body-parser": "^1.19.1",
     "@types/chai": "^4.2.22",
