--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/body-parser": "^1.19.1",
     "@types/chai": "^4.2.22",
     "@types/concurrently": "^6.3.0",
+    "@types/connect-mongo": "^3.1.3",
     "@types/errorhandler": "^1.5.0",
     "@types/eslint": "^7.28.1",
     "@types/express": "^4.17.13",
