--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.12.2",
+    "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.10",
     "nodemailer": "^6.7.0",
