--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "stripe": "^8.205.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
